[package]
name = "winjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
hooker = { version = "0.1.8", features = ["std"] }
windows = { version = "0.54.0", features = ["Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_Storage_FileSystem", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader"] }
